Add crypto_ranking_show.
